tests/snapshots/module_snapshots__event_stream_by_kind_tool_call.snap
---
source: tests/module_snapshots.rs
expression: event
---
{
  "ts": "[TIMESTAMP]",
  "type": "tool_call",
  "tool_name": "read_file",
  "tool_use_id": "tool-1",
  "parent_tool_use_id": null,
  "input": {
    "path": "src/main.rs"
  }
}
