tests/snapshots/module_snapshots__event_stream_count_by_kind.snap
---
source: tests/module_snapshots.rs
expression: counts
---
{
  "assistant_message": 1,
  "run_completed": 1,
  "run_started": 1,
  "tool_call": 1,
  "tool_result": 1,
  "warning": 1
}
