tests/snapshots/module_snapshots__event_stream_filter_include.snap
---
source: tests/module_snapshots.rs
expression: counts
---
{
  "tool_call": 1,
  "tool_result": 1
}
