tests/snapshots/module_snapshots__negotiate_version_incompatible.snap
---
source: tests/module_snapshots.rs
expression: err.to_string()
---
incompatible protocol versions: local abp/v0.1, remote abp/v1.0
