tests/snapshots/module_snapshots__process_config_default.snap
---
source: tests/module_snapshots.rs
expression: cfg
---
{
  "working_dir": null,
  "env_vars": {},
  "inherit_env": true
}
