tests/snapshots/module_snapshots__process_config_with_env.snap
---
source: tests/module_snapshots.rs
expression: cfg
---
{
  "working_dir": "/tmp/workspace",
  "env_vars": {
    "API_KEY": "sk-test-123",
    "NODE_ENV": "production"
  },
  "timeout": 120000,
  "inherit_env": false
}
