tests/snapshots/module_snapshots__process_status_variants.snap
---
source: tests/module_snapshots.rs
expression: statuses
---
[
  {
    "state": "not_started"
  },
  {
    "state": "running",
    "pid": 12345
  },
  {
    "state": "exited",
    "code": 0
  },
  {
    "state": "killed"
  },
  {
    "state": "timed_out"
  }
]
