tests/snapshots/module_snapshots__retry_policy_zero_retries.snap
---
source: tests/module_snapshots.rs
expression: policy
---
{
  "max_retries": 0,
  "initial_backoff": 100,
  "max_backoff": 5000,
  "backoff_multiplier": 2.0
}
